task2/k8s/03-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-frontend
  namespace: task2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-frontend
  template:
    metadata:
      labels:
        app: hello-frontend
    spec:
      containers:
        - name: frontend
          image: docker.io/moz1h1gh/hellofrontend:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: hello-frontend
  namespace: task2
spec:
  selector:
    app: hello-frontend
  ports:
    - port: 80
      targetPort: 80
