task2/k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app
  namespace: task2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: hello-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-frontend
                port:
                  number: 80
